# press-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/airflow/: Dockerfile  requirements.txt
backend/airflow/dags/: guardian_pipeline.py
backend/src/press_intelligence/: __init__.py  bootstrap.py  main.py
backend/src/press_intelligence/api/: __init__.py  middleware.py  routes.py
backend/src/press_intelligence/clients/: _retry.py  airflow.py  bigquery.py  guardian.py
backend/src/press_intelligence/core/: __init__.py  config.py  dependencies.py  idempotency.py  logging.py
backend/src/press_intelligence/mock_data/: articles.json  overview.json  publishing_volume.json  runs.json  sections.json  status.json  tags.json
backend/src/press_intelligence/models/: __init__.py  schemas.py
backend/src/press_intelligence/services/: __init__.py  alerts.py  analytics_service.py  guardian_pipeline.py  mock_store.py  ops_service.py
backend/src/press_intelligence/sql/analytics/: article_detail.sql  articles_search.sql  freshness.sql  overview.sql  overview_metrics.sql  publishing_volume.sql  sections.sql  tags.sql  top_sections.sql
backend/src/press_intelligence/sql/materializations/analytics/: article_tags.sql  articles_latest.sql  content_freshness.sql  daily_volume.sql  section_counts_daily.sql  section_daily.sql  tag_counts_daily.sql
backend/src/press_intelligence/sql/materializations/ops/: data_quality_results.sql
backend/src/press_intelligence/sql/ops/: data_quality.sql  merge_pipeline_runs.sql  pipeline_runs.sql
backend/tests/: conftest.py  test_airflow_client.py  test_alerts.py  test_analytics_service.py  test_api.py  test_bigquery_client.py  test_guardian_client.py  test_guardian_pipeline_transforms.py  test_idempotency.py  test_load_articles_validation.py  test_ops_service.py  test_routes_contract.py
frontend/: README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+7 files in other folders)
