[project]
name = "press-intelligence"
version = "0.1.0"
description = "Backend and pipeline services for Press Intelligence."
readme = "README.md"
authors = [{ name = "KIRAN", email = "pradhankukiran@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-cloud-bigquery>=3.38.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
press-intelligence-backend = "press_intelligence.main:main"
press-intelligence-bootstrap = "press_intelligence.bootstrap:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]
"src/press_intelligence/api/routes.py" = ["B008"]
